--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         }
 
         function getUrlParam(param) {
-            const queryString = window.location.search;
-            const urlParams = new URLSearchParams(queryString);
+            const urlParams = new URLSearchParams(window.location.search);
             return urlParams.get(param);
         }
 
